# seismos

./: .gitignore  LICENSE  README.md  install-fomosto.sh  pyproject.toml
mt_inversions/grond_norsar_2022_03_21/config/: regional_cmt.gronf
mt_inversions/grond_norsar_2022_03_21/data/events/gfz2022fots/: event.txt
mt_inversions/grond_norsar_2022_03_21/data/events/gfz2022fots/waveforms/: grondown.command
seismos/earthquake_detection/: template_matching_detection.py
tests/: test_seismos.py
